@@ -1161,6 +1161,8 @@ mailcheck_properties (AppletWidget *applet, gpointer data)
 	}
 	
 	mc->property_window = gnome_property_box_new ();
+	gtk_window_set_wmclass (GTK_WINDOW (mc->property_window),
+				"mailcheck", "Mailcheck");
 	gtk_window_set_title (GTK_WINDOW (mc->property_window),
 			      _("Mail check properties"));
 	gnome_window_icon_set_from_file (GTK_WINDOW (mc->property_window),
@@ -1257,6 +1259,8 @@ mailcheck_about(AppletWidget *a_widget, gpointer a_data)
 				      authors,
 				      _("Mail check notifies you when new mail is on your mailbox"),
 				      NULL);
+	gtk_window_set_wmclass (GTK_WINDOW (mc->about),
+				"mailcheck", "Mailcheck");
 	gnome_window_icon_set_from_file (GTK_WINDOW (mc->about),
 					 GNOME_ICONDIR"/gnome-mailcheck.png");
 	gtk_signal_connect( GTK_OBJECT(mc->about), "destroy",
