@@ -1,3 +1,10 @@
+2001-01-22  jacob berkman  <jacob@ximian.com>
+
+	* fish/*.c:
+	* gen_util/*.c: manually set the wmclass for the property and
+	about dialogs, since these are shlib applets and get the panel's
+	window class, which sawmill likes to do funky stuff with
+
 Thu Dec 21 17:51:37 2000  George Lebl <jirka@5z.com>
 
 	* gen_util/clock.c:  Apply patch from Tobias Bengtsson <tobbe@tobbe.nu>
